[tool.poetry]
name = "python100days"
version = "0.1.0"
description = ""
authors = ["233Official <ayusummer233@qq.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "1.0.0"
jupyterlab = "3.4.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
default = true